Added menu item to Change File Directory, created new classes to Change File Directory (ChangeStorageDirectoryCommand, Event)

--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -17,6 +17,13 @@
                   <MenuItem mnemonicParsing="false" onAction="#handleExit" text="Exit" />
                </items>
             </Menu>
+            
+            <Menu mnemonicParsing="false" text="Set Storage Directory">
+                <items>
+                   <MenuItem mnemonicParsing="false" onAction="#handleChangeDirectory" text="Change Directory" />
+                </items>
+            </Menu>
+            
             <Menu mnemonicParsing="false" text="Help">
                <items>
                   <MenuItem fx:id="helpMenuItem" mnemonicParsing="false" onAction="#handleHelp" text="Help" />
